# hemapex

./: .gitignore  README.md  pyproject.toml
src/: api_calls.py  api_pipeline.py  compare_results.py  config.py  extract_pipeline.py  extract_treatments.py  get_update_rghc.py  hf_prompting.py  latest_tasy.py  openai_extract.py  redcap_treatment_labels.py  structured_relapse.py  structured_treatment.py  tmo_pipeline.py  utils.py
src/txt/: example_text.txt  example_text_dates.txt  instructions.txt  mm_instructions.txt  prompt.txt  response_2025-11-12_16-52-44.txt  response_2025-11-13_15-38-57.json  tmo_instructions.txt
